welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: not found: value Case
	Case.Couleur=getCouleurSol();
        ^SlugSnail:8: error: not found: value estSurBisucit
  while (estSurBisucit==false) {
         ^SlugSnail:23: error: not found: value Case
  	if (getCouleurSol()==Case.Couleur) {
                             ^