welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
var couleur = false

def hunt(c:Color) {
  avance();
	Case.Couleur=getCouleurSol();
  recule();
  while (estSurBisucit==false) {
  	isFacingTrail();
    if (couleur==true){
      avance();
    }
  	
  }
     
}



def isFacingTrail():Boolean = { 
	if (estFaceMur==false) {
		avance();
  	if (getCouleurSol()==Case.Couleur) {
  		recule();
    	couleur = true;
  	
    	}
    	else { 
      	recule();
  			couleur = false
      }   
 	}
  else gauche()
  return couleur  
}